search applicant box functionality updated

--- a/app/views/v10/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v10/provider/view-vacancy/0-dashboard.html
@@ -20,7 +20,7 @@ Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-two-thirds">
         <!-- Search -->
-        <form action="./vacancies" method="get" >
+        <form action="0-vacancies-search" method="post" >
           <div class="row-group">
             <div class="search-table column-two-thirds govuk-!-margin-bottom-4">
               <fieldset class="govuk-fieldset">
@@ -28,7 +28,7 @@ Recruitment - {{serviceName}} - GOV.UK
                   <input type="hidden" name="clientsFilter" value="new">
                   <div class="search-input search-input-with-button">
                     <label class="govuk-label" for="search">
-                      Search by vacancy title, reference number or applicant
+                      Search by vacancy, reference or applicant
                     </label>
                   <div class="autocomplete__parent_wrapper">
                     <div class="autocomplete__wrapper">
