--- a/app/views/v10/provider/view-vacancy/3a-live.html
+++ b/app/views/v10/provider/view-vacancy/3a-live.html
@@ -143,7 +143,7 @@ Vacancies
 
 <!-- SEARCH start -->
   <div class="govuk-grid-column-two-thirds">
-    <form action="vacancies" method="get" >
+    <form action="0-vacancies-search" method="post" >
       <div class="row-group">
         <div class="search-table column-two-thirds govuk-!-margin-bottom-4">
           <fieldset class="govuk-fieldset">
@@ -151,7 +151,7 @@ Vacancies
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by vacancy title, reference number, employer or applicant
+                  Search by vacancy, reference, employer or applicant
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
@@ -177,37 +177,37 @@ Vacancies
     <a href="#">Show all vacancies</a>
   </p>
 
-<table class="govuk-table das-table--responsive">           
-  <thead class="govuk-table__head govuk-body-s">
-      <tr>
-          <th scope="col" class="govuk-table__header"><span class="no-wrap">Vacancy</span></th>
-          <th scope="col" class="govuk-table__header">Employer</th>
-          <th scope="col" class="govuk-table__header">Applications</th>
-          <th scope="col" class="govuk-table__header">Closing</th>
-          <th scope="col" class="govuk-table__header">Status</th>
-          <th scope="col" class="govuk-table__header"></th>
-      </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-          <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
-              <td class="govuk-table__cell">FENDI LTD</td>
-              <td class="govuk-table__cell"> - </td>
-              <td class="govuk-table__cell">01 Jun 2022</td>             
-              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="3b-manage-vacancy" class="govuk-link">Manage</a></td>   
-          </tr>
-
-          <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
-              <td class="govuk-table__cell">FENDI LTD</td>
-              <td class="govuk-table__cell"> - </td>
-              <td class="govuk-table__cell">01 Jun 2022</td>             
-              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
-          </tr>
-  </tbody>
-</table>
+  <table class="govuk-table das-table--responsive">           
+    <thead class="govuk-table__head govuk-body-s">
+        <tr>
+            <th scope="col" class="govuk-table__header"><span class="no-wrap">Vacancy</span></th>
+            <th scope="col" class="govuk-table__header">Employer</th>
+            <th scope="col" class="govuk-table__header">Applications</th>
+            <th scope="col" class="govuk-table__header">Closing</th>
+            <th scope="col" class="govuk-table__header">Status</th>
+            <th scope="col" class="govuk-table__header"></th>
+        </tr>
+    </thead>
+    <tbody class="govuk-table__body">
+            <tr class="govuk-table__row govuk-body-s">
+              <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
+                <td class="govuk-table__cell">Gloucestershire Health and Care NHS Foundation Trust</td>
+                <td class="govuk-table__cell"> 2 </td>
+                <td class="govuk-table__cell">01 Nov 2022</td>             
+                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
+                <td class="govuk-table__cell"><a href="3b-manage-vacancy" class="govuk-link">Manage</a></td>   
+            </tr>
+  
+            <tr class="govuk-table__row govuk-body-s">
+              <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
+                <td class="govuk-table__cell">FENDI LTD</td>
+                <td class="govuk-table__cell"> 2 </td>
+                <td class="govuk-table__cell">11 Nov 2022</td>             
+                <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
+                <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
+            </tr>
+    </tbody>
+  </table>
 
 </div>
 </div>
