--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
@@ -167,7 +167,7 @@ Manage vacancy
         <div class="search-input search-input-with-button">
           <label class="govuk-label" for="query">
             <!--Client reference-->
-            Search by applicant
+            Search applicant name
           </label>
 
           <div class="autocomplete__parent_wrapper">
@@ -179,7 +179,7 @@ Manage vacancy
               <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
             </div>
           </div>
-          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="Faizal">
+          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery">
         </div>
         <div class="search-submit">
           <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search applications</button>
@@ -187,9 +187,10 @@ Manage vacancy
       </div>
     </fieldset>
 
-    <p class="govuk-body"><a href="employers-select">Clear search</a></p>
-
     <p class="govuk-body govuk-!-margin-bottom-6">1 application matches <b>'Faizal'</b></p>
+
+    <p class="govuk-body"><a href="3b-manage-vacancy">Clear search</a></p>
+
     
   </div>
 </div>
