--- a/app/views/v10/provider/view-vacancy/5a-closed.html
+++ b/app/views/v10/provider/view-vacancy/5a-closed.html
@@ -143,7 +143,7 @@ Vacancies
 
 <!-- SEARCH start -->
   <div class="govuk-grid-column-two-thirds">
-    <form action="vacancies" method="get" >
+    <form action="0-vacancies-search" method="post" >
       <div class="row-group">
         <div class="search-table column-two-thirds govuk-!-margin-bottom-4">
           <fieldset class="govuk-fieldset">
@@ -151,7 +151,7 @@ Vacancies
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by vacancy title, reference number, employer or applicant
+                  Search by vacancy, reference, employer or applicant
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
