search applicant from within vacancy

--- a/app/views/v10/provider/view-vacancy/0-vacancies-search-0.html
+++ b/app/views/v10/provider/view-vacancy/0-vacancies-search-0.html
@@ -156,7 +156,7 @@ Vacancies
 
                 <div class="autocomplete__parent_wrapper">
                   <div class="autocomplete__wrapper">
-                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="{%if query.search %}{{query.search}}{%endif%}">
+                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="FENDI LTD">
                   </div>
                 </div>
 
