--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search-0.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search-0.html
@@ -179,7 +179,7 @@ Manage vacancy
               <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
             </div>
           </div>
-          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery">
+          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="Faizal">
         </div>
         <div class="search-submit">
           <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search applications</button>
