--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy-search.html
@@ -160,6 +160,9 @@ Manage vacancy
     <h2 class="govuk-heading-l">Manage applications</h2>
 
   <!-- search box START -->
+
+  <form action="3b-manage-vacancy-search-0" method="post" >
+
     <fieldset class="govuk-fieldset">
       <legend class="govuk-visually-hidden">Search employer name or account name</legend>
       <div class="govuk-form-group search-field search-field-darker">
@@ -179,7 +182,7 @@ Manage vacancy
               <input aria-owns="searchOrgs__listbox" autocomplete="off" class="autocomplete__input" id="searchOrgsAuto" name="query" placeholder="" role="combobox" type="text" style="display:none;" value="">
             </div>
           </div>
-          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery">
+          <input class="govuk-text" name="searchOrgQuery" id="searchOrgsQuery" value="Faizal">
         </div>
         <div class="search-submit">
           <button class="govuk-button" data-module="govuk-button" type="submit" id="searchOrgsSubmit" name="searchOrgsSubmit" value="Search Organisations">Search applications</button>
@@ -191,6 +194,7 @@ Manage vacancy
 
     <p class="govuk-body"><a href="3b-manage-vacancy">Clear search</a></p>
 
+  </form>
     
   </div>
 </div>
