--- a/app/views/v10/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v10/provider/view-vacancy/3b-manage-vacancy.html
@@ -160,6 +160,9 @@ Manage vacancy
     <h2 class="govuk-heading-l">Manage applications</h2>
 
   <!-- search box START -->
+
+  <form action="3b-manage-vacancy-search" method="post" >
+
     <fieldset class="govuk-fieldset">
       <legend class="govuk-visually-hidden">Search employer name or account name</legend>
       <div class="govuk-form-group search-field search-field-darker">
@@ -186,7 +189,7 @@ Manage vacancy
         </div>
       </div>
     </fieldset>
-
+  </form>
   </div>
 </div>
   <!-- search box END -->
