--- a/app/views/v13/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart shared with employer
+          Keith Stewart shared anonymously to employer's Apprenticeship service account
         </h3>
       </div>
     </div>
@@ -106,7 +106,7 @@ Manage vacancy
       name: "Keith Stewart",
       id: "678CFR0",
       status: "shared",
-      link: "",
+      link: "../account/application-shared",
       classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
