--- a/app/views/v13/provider/view/3d-check-share.html
+++ b/app/views/v13/provider/view/3d-check-share.html
@@ -15,12 +15,12 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Do you want to share these applications?</h1>
+    <h1 class="govuk-heading-l">Do you want to share this application?</h1>
 
     
   <!-- list START       -->
         <p class="govuk-body" >
-          These applications will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
+          This application will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
         </p>
 
         <div style="background-color: #f3f2f1; padding: 15px;">
@@ -46,13 +46,13 @@ Manage vacancy
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
-                  Yes, share these applications with employer
+                  Yes, share this application with employer 
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="share_applications_no">
-                  No, don't share these applications with employer
+                  No, don't share this application with employer
                 </label>
               </div>
             </div>
@@ -62,7 +62,7 @@ Manage vacancy
  <!-- radio buttons END -->
 
  <button class="govuk-button" data-module="govuk-button">
-  Continue
+  Confirm
 </button>
 
 </form>
