--- a/app/views/v13/provider/view/6b-check-share.html
+++ b/app/views/v13/provider/view/6b-check-share.html
@@ -74,7 +74,7 @@ Manage vacancy
  <!-- radio buttons END -->
 
  <button class="govuk-button" data-module="govuk-button">
-  Continue
+  Confirm
 </button>
 
 </form>
