--- a/app/views/v13/provider/view/7a-check-successful.html
+++ b/app/views/v13/provider/view/7a-check-successful.html
@@ -15,7 +15,7 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to make a job offer to Keith Stewart? </h1>
+    <h1 class="govuk-heading-l">Are you sure you want to notify Keith Stewart that they have been successful?</h1>
 
     
 
