--- a/app/views/v13/provider/account/application-new.html
+++ b/app/views/v13/provider/account/application-new.html
@@ -205,19 +205,18 @@ Manage apprentices
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application-4" name="application" type="radio" value="successful">
+                <input class="govuk-radios__input" id="application-4" name="application" type="radio" value="successful" data-aria-controls="conditional-contact-4">
                 <label class="govuk-label govuk-radios__label" for="application-4">
-                  Make job offer
+                  Make successful
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-4">
                 <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-successful">
-                  </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-successful" name="contact-by-successful" type="successful" spellcheck="false" autocomplete="email">
+                  <div id="sign-in-hint" class="govuk-hint">                    
+                    This will send a message to the applicant to let them know they have been successful.
+                  </div>
                 </div>
               </div>
-
 
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application-5" name="application" type="radio" value="unsuccessful" data-aria-controls="conditional-contact-5">
@@ -233,7 +232,7 @@ Manage apprentices
                   <div id="sign-in-hint" class="govuk-hint">
                     Explain why the application has been unsuccessful, your comments will be sent to the applicant.
                   </div>
-                  <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="5" aria-describedby="word-count-info"></textarea>                
+                  <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="8" aria-describedby="word-count-info"></textarea>                
                 </div>
                 <div id="word-count-info" class="govuk-hint govuk-character-count__message">
                   You can enter up to 200 words
