--- a/app/views/v13/provider/view/8a-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful.html
@@ -206,7 +206,7 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "offer made",
+      status: "successful",
       link: "",
       classes: "govuk-tag--green",
       date: "13 Oct 2022",
@@ -272,7 +272,7 @@ Manage vacancy
         {% for unsuccessful in appsTableData %}
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-checkboxes--small">
-            {% if (unsuccessful.status|lower !== "offer made") and (unsuccessful.status|lower !== "unsuccessful") %}
+            {% if (unsuccessful.status|lower !== "successful") and (unsuccessful.status|lower !== "unsuccessful") %}
             <div class="govuk-checkboxes__item govuk-!-padding-left-1">
               <input class="govuk-checkboxes__input" id="unsuccessful-{{ loop.index }}" name="unsuccessful" type="checkbox" value="{{ unsuccessful.id }}" {{ checked("unsuccessful", unsuccessful.id) }}>
               <label class="govuk-label govuk-checkboxes__label" for="unsuccessful-{{ loop.index }}">&nbsp;</label>
