--- a/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
@@ -80,7 +80,7 @@ Manage vacancy
  <!-- radio buttons END -->
 
  <button class="govuk-button" data-module="govuk-button">
-  Continue
+  Confirm
 </button>
 
 </form>
