--- a/app/views/v13/employer/home-v2.html
+++ b/app/views/v13/employer/home-v2.html
@@ -142,8 +142,8 @@ GOV.UK Prototype Kit
   </ul>
   <section class="govuk-tabs__panel" id="past-day" role="tabpanel" aria-labelledby="tab_past-day">
 
-      <p>11 applications shared to review <br>
-        <a href="./view/6-shared-new">View applications</a>
+      <p>1 advert with applications shared to review  <br>
+        <a href="./view/6b-shared-applications">View applications</a>
       </p>
   </section>
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="past-week" role="tabpanel" aria-labelledby="tab_past-week">
