--- a/app/views/v13/employer/view/0-dashboard.html
+++ b/app/views/v13/employer/view/0-dashboard.html
@@ -215,11 +215,14 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">2</span>
-              <a class="card-link" href="6-shared">
-                Review shared applications
+              <a class="card-link" href="6-shared-new">
+                Applications shared to review
               </a>
             </h3>
-            <p class="govuk-body das-card--description">Review applications shared with you by a training provider</p>
+            <p class="govuk-body das-card--description">Review applications shared with you by a training provider <br><br>
+            <a href="6-shared-all"> View all shared applications </a>
+            <br><br>
+          </p>
           </div>
         </div>
       </div>
