--- a/app/views/v13/employer/view/6-shared-new.html
+++ b/app/views/v13/employer/view/6-shared-new.html
@@ -165,7 +165,7 @@ Adverts
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 adverts with shared applications </b> &nbsp;
+  <p class="govuk-body"><b>2 adverts with shared applications to review </b> &nbsp;
     <a href="#">Show all adverts</a>
   </p>
 
@@ -193,8 +193,8 @@ Adverts
           <tr class="govuk-table__row govuk-body-s">
             <td class="govuk-table__cell">Electronic Engineering Technician Apprentice</td>
               <td class="govuk-table__cell">VAC10000079654</td>
-              <td class="govuk-table__cell"> 5 shared </td>
-              <td class="govuk-table__cell">31 Oct 2022</td>             
+              <td class="govuk-table__cell"> 5 shared <b>(1 new)</b></td>
+              <td class="govuk-table__cell">31 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
               <td class="govuk-table__cell"><a href="#" class="govuk-link">Review</a></td>   
           </tr>
