provider search applicant content updated

--- a/app/views/v10/provider/view-vacancy/0-vacancies-search-0.html
+++ b/app/views/v10/provider/view-vacancy/0-vacancies-search-0.html
@@ -156,7 +156,7 @@ Vacancies
 
                 <div class="autocomplete__parent_wrapper">
                   <div class="autocomplete__wrapper">
-                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="FENDI LTD">
+                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="Faizal">
                   </div>
                 </div>
 
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-<h2 class="govuk-heading-m">0 vacancies with 'FENDI LTD'</h1>
+<h2 class="govuk-heading-m">0 vacancies with 'Faizal'</h1>
   <p class="govuk-body"><a href="3a-live">Clear search</a></p>
 
 </div>
