--- a/app/views/v10/provider/view-vacancy/0-vacancies-search.html
+++ b/app/views/v10/provider/view-vacancy/0-vacancies-search.html
@@ -156,7 +156,7 @@ Vacancies
 
                 <div class="autocomplete__parent_wrapper">
                   <div class="autocomplete__wrapper">
-                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="FENDI LTD">
+                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="Faizal">
                   </div>
                 </div>
 
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-<h2 class="govuk-heading-m">2 vacancies with 'FENDI LTD'</h1>
+<h2 class="govuk-heading-m">3 vacancies with 'Faizal'</h1>
   <p class="govuk-body"><a href="3a-live">Clear search</a></p>
 
     
@@ -206,6 +206,15 @@ Vacancies
               <td class="govuk-table__cell"> - </td>
               <td class="govuk-table__cell">01 Jun 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
+              <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
+          </tr>
+
+          <tr class="govuk-table__row govuk-body-s">
+            <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
+              <td class="govuk-table__cell">EMPLOYER LTD</td>
+              <td class="govuk-table__cell"> - </td>
+              <td class="govuk-table__cell">20 May 2022</td>             
+              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">closed</strong></td>
               <td class="govuk-table__cell"><a href="#" class="govuk-link">Manage</a></td>   
           </tr>
   </tbody>
