--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -48,11 +48,15 @@ Get started - Apprenticeship services - GOV.UK
       <br><br>
       The training provider or employer can delete the API keys from within their account. Deleting the key will stop applications using the key from working.
     </p>
+
+ <!-- SECTION 3    -->
     <h2 class="govuk-heading-l" id="working-independently">Using our Display adverts API if you are working independently</h2>
     <p class="govuk-body">
       If you are not working with a training provider or employer, you can use the Display adverts API. You’ll need someone with technical knowledge to connect your system with the API.      
       <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or sign in</a>to access the Display adverts API key.
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account to access the Display adverts API key</a>.
+      <br><br>
+      If you already have an account, you can <a href="login" class="govuk-link govuk-link--no-visited-state">sign in to access the Display adverts API</a>.
     </p>
 
     <!-- <button class="govuk-button" data-module="govuk-button">
