--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -16,7 +16,7 @@ Get started - Apprenticeship services - GOV.UK
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Get started</h1>      
-    <h2 class="govuk-heading-l">About the Apprenticeship Service APIs</h2>
+    <h2 class="govuk-heading-l">About the Apprenticeship service APIs</h2>
     <p class="govuk-body">
       <a href="#" class="govuk-link govuk-link--no-visited-state">Track Apprenticeship Progress API</a>
       <br>
