--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -20,20 +20,23 @@ Get started - Apprenticeship services - GOV.UK
     <p class="govuk-body">
       <a href="#" class="govuk-link govuk-link--no-visited-state">Track Apprenticeship Progress API</a>
       <br>
-      <span class="govuk-caption">Share data on the progress of your apprenticeships</span>
+      <span class="govuk-caption">Share data on the progress of your apprenticeships.</span>
       <br><br>
       <a href="#" class="govuk-link govuk-link--no-visited-state">Track Apprenticeship Progress API Sandbox</a>
       <br>
-      <span class="govuk-caption">Share data on the progress of your apprenticeships</span>
+      <span class="govuk-caption">Share data on the progress of your apprenticeships.</span>
       <br><br>
       <a href="recruitment-api-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API</a>
       <br>
-      <span class="govuk-caption">Use this product to create and submit adverts.</span>
+      <span class="govuk-caption">Create an advert on Find an apprenticeship using your existing systems.</span>
       <br><br>
       <a href="recruitment-api-sandbox-documentation" class="govuk-link govuk-link--no-visited-state">Recruitment API sandbox</a>
+      <br>
+      <span class="govuk-caption">Test creating an advert on Find an apprenticeship using your existing systems.</span>
       <br><br>
-      <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a><br>
-      <span class="govuk-caption">Use this product to retrieve adverts.</span>
+      <a href="display-adverts-api-documentation" class="govuk-link govuk-link--no-visited-state">Display adverts API</a>
+      <br>
+      <span class="govuk-caption">Display recruitment adverts from Find an apprenticeship.</span>
       <br><br>
     </p>
 
